# av

./: .gitignore  .pre-commit-config.yaml  CI_STATUS_REPORT.md  Dockerfile  README.md  REQUIREMENTS.md  bandit-report.txt  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dashboard.yml  dependency-updates.yml  nightly.yml  quality-gate.yml  release.yml
docs/: index.md  usage.md
docs/api/: analysis-api.md  deployment-api.md  device-api-new.md  device-api.md
docs/development/: api-architecture.md  architecture.md  cicd.md  contributing.md  pipeline-summary.md  testing.md  troubleshooting.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: config-analysis.md  device-config.md  digital-twins.md  overview.md
spatium/: main.py
spatium/analysis/: batfish_analyzer.py
spatium/api/: analysis.py  containerlab_inventory.py  dependencies.py  deployment.py  device.py  exceptions.py  responses.py
spatium/api/routers/: __init__.py  device_config.py  inventory.py
spatium/clients/: rest_client.py  ssh_client.py
spatium/core/: config.py  device_constants.py
spatium/deployment/: containerlab.py
spatium/device_config/: gnmi_client.py  sonic_client.py  ssh_client.py
spatium/models/: deployment.py  device.py
spatium/services/: __init__.py  deployment.py  device_config.py  inventory.py
tests/: conftest.py  test_main.py
tests/integration/: test_deployment_api.py  test_device_api.py  test_device_config_service.py  test_device_inventory.py
tests/mocks/: ssh_output_2.json  ssh_output_error.json
tests/unit/: sample_ssh_outputs.json  test_api_device.py  test_containerlab_deployer.py  test_deployment_router.py  test_device_fetch_config.py  test_device_fetch_config_rest.py  test_gnmi_client.py  test_rest_client.py  test_ssh_client.py  test_ssh_client_enhanced.py
topologies/: large-topology.yaml  minimal-topology.yaml  test-topo.yaml  test-topology.yaml
