[project]
name = "spatium"
version = "0.1.0"
description = "Network Configuration Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "asyncssh>=2.13.0", # For SSH connections
    "pygnmi>=0.8.12", # For gNMI connections
    "pydantic-settings>=2.0.0", # For settings management
    "pyyaml>=6.0", # For YAML processing (ContainerLab topology)
    "jinja2>=3.1.2", # For templating
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "httpx>=0.24.1",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]
